# ai-BOT

./: .env.example  README_NOVA.md  create_resume.py  pyproject.toml  requirements.txt
.claude/: launch.json  settings.local.json
all excels/: all_applied_applications_history.csv  all_failed_applications_history.csv
all resumes/default/: resume.docx
config/: personals.py  questions.py  search.py  secrets.py  settings.py
frontend/: index.html  package.json  vite.config.ts
frontend/src/: audio.ts  main.ts  orb.ts  styles.css  voice.ts  websocket.ts
logs/: log.txt
nova/: __init__.py  config.py  main.py  server.py
nova/brain/: __init__.py  agents.py  proactive.py  system_prompt.py
nova/memory/: __init__.py  defaults.py  store.py
nova/routines/: __init__.py  scheduler.py
nova/safety/: __init__.py  governance.py  guardrails.py  killswitch.py  logger.py
nova/setup/: __init__.py  configure_google.py  enroll.py
nova/skills/: __init__.py
nova/skills/morning-briefing/: SKILL.md
nova/skills/web-scraper/: SKILL.md
nova/speech/: __init__.py  stt.py
nova/tools/: __init__.py  app_tool.py  browser_tool.py  calendar_tool.py  clipboard_tool.py  cua_tool.py  document_tool.py  email_tool.py  file_tool.py  screen_tool.py  skills_loader.py  terminal_tool.py
nova/ui/: __init__.py  tray.py
nova/utils/: __init__.py  retry.py  timing.py
nova/voice/: __init__.py  tts.py
nova/wake/: __init__.py  clap_detector.py  liveness.py  speaker_verify.py  vad.py  wakeword.py
scripts/: red_team.py
