[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nova"
version = "2.0.0"
description = "Nova — voice-gated personal desktop AI agent for Windows"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Nova Project" }]
keywords = ["ai", "assistant", "voice", "agent", "windows"]

dependencies = [
    # Core async / web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
    # AI / LLM
    "openai>=1.30.0",
    "openai-agents>=0.0.6",
    # Speech-to-text
    "faster-whisper>=1.0.1",
    # Wake word
    "pvporcupine>=3.0.0",
    # VAD
    "silero-vad>=5.0",
    "torch>=2.2.0",
    "torchaudio>=2.2.0",
    # Speaker verification
    "speechbrain>=1.0.0",
    # TTS
    "elevenlabs>=1.2.0",
    "pywin32>=306",
    # Audio I/O
    "pyaudio>=0.2.14",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    # Browser automation
    "playwright>=1.44.0",
    # Screen capture & OCR
    "mss>=9.0.1",
    "pytesseract>=0.3.10",
    "Pillow>=10.3.0",
    # Storage
    # (sqlite3 is stdlib)
    "aiosqlite>=0.20.0",
    # Utilities
    "rich>=13.7.0",
    "typer>=0.12.0",
    "pynput>=1.7.6",
    "psutil>=5.9.8",
    "keyboard>=0.13.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "black>=24.4.2",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "httpx>=0.27.0",
]

[project.scripts]
nova = "nova.main:cli_entry"

[tool.setuptools.packages.find]
where = ["."]
include = ["nova*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
